[package]
name = "vehicle-management-template"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
publish = false

[lib]
name = "vehicle_management_template"
path = "src/lib.rs"

[dependencies]
fsw-sdk-app = { path = "../../crates/fsw-sdk-app" }
fsw-sdk-core = { path = "../../crates/fsw-sdk-core" }
fsw-sdk-fdir = { path = "../../crates/fsw-sdk-fdir" }
fsw-sdk-hal = { path = "../../crates/fsw-sdk-hal" }
fsw-sdk-runtime = { path = "../../crates/fsw-sdk-runtime" }
fsw-sdk-template-launcher = { path = "../../crates/fsw-sdk-template-launcher" }
fsw-sdk-template-support = { path = "../../crates/fsw-sdk-template-support" }
