[package]
name = "fsw-sdk-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
name = "fsw_sdk_runtime"
path = "src/lib.rs"

[dependencies]
fsw-sdk-core = { path = "../fsw-sdk-core" }
fsw-sdk-fdir = { path = "../fsw-sdk-fdir" }

[dev-dependencies]
fsw-sdk-time = { path = "../fsw-sdk-time" }
