[package]
name = "fsw-sdk-template-support"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
name = "fsw_sdk_template_support"
path = "src/lib.rs"

[dependencies]
fsw-sdk-app = { path = "../fsw-sdk-app" }
fsw-sdk-core = { path = "../fsw-sdk-core" }
