[package]
name = "minimal-sim"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
publish = false

[dependencies]
fsw-sdk-core = { path = "../../crates/fsw-sdk-core" }
fsw-sdk-fdir = { path = "../../crates/fsw-sdk-fdir" }
fsw-sdk-runtime = { path = "../../crates/fsw-sdk-runtime" }
fsw-sdk-time = { path = "../../crates/fsw-sdk-time" }
